# slm-split

./: ARCHITECTURE_DIAGRAMS.md  BANDWIDTH_AWARE_IMPLEMENTATION.md  BANDWIDTH_AWARE_QUICK_REF.md  DELIVERABLES.md  FILE_INDEX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  README_BANDWIDTH_AWARE.md  SPLIT_INFERENCE_README.md  TELEMETRY_USAGE.md  analyze_telemetry.py  example_bandwidth_aware_orchestrator.py  export_to_onnx.py  quick_test.py  requirements_split_inference.txt  run_orchestrator.sh  setup_split_inference.sh  test_bandwidth_aware.py  test_telemetry.py  visualize_telemetry.py
split_inference/configs/: partition_config.yaml
split_inference/cpp/: CMakeLists.txt  bandwidth_monitor.hpp  scheduler  scheduler.cpp
split_inference/python/: orchestrator.py  telemetry_logger.py
split_inference/sycl_kernels/: moe_routing.hpp
split_inference/tests/: test_system.py
telemetry/: session_2025-11-17_00-01-19.csv  session_2025-11-17_00-01-19.json  session_2025-11-17_00-01-55.json  session_2025-11-17_00-04-29.csv  session_2025-11-17_00-04-29.json  session_2025-11-17_00-05-10.csv  session_2025-11-17_00-05-10.json  test_session.csv  test_session.json
telemetry/plots_session_2025-11-17_00-05-10/: summary_report.txt
